# task-manager

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  project.md  skills-lock.json
.agents/plans/: implementation-plan.md
src/: highlightdelegate.cpp  highlightdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  metricswidget.cpp  metricswidget.h  processdetailsdialog.cpp  processdetailsdialog.h  processeswidget.cpp  processeswidget.h
